1.12.0/_sources/reference/dipy.workflows.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`workflows`
================
.. automodule:: dipy.workflows

.. currentmodule:: dipy.workflows
.. autosummary::



.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.align`
------------------------------
.. automodule:: dipy.workflows.align

.. currentmodule:: dipy.workflows.align
.. autosummary::

   ResliceFlow
   SlrWithQbxFlow
   ImageRegistrationFlow
   ApplyTransformFlow
   SynRegistrationFlow
   MotionCorrectionFlow
   BundleWarpFlow
   check_dimensions


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.base`
-----------------------------
.. automodule:: dipy.workflows.base

.. currentmodule:: dipy.workflows.base
.. autosummary::

   IntrospectiveArgumentParser
   format_key_value_table
   add_default_args_to_docstring
   get_args_default
   none_or_dtype


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.cli`
----------------------------
.. automodule:: dipy.workflows.cli

.. currentmodule:: dipy.workflows.cli
.. autosummary::

   run


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.combined_workflow`
------------------------------------------
.. automodule:: dipy.workflows.combined_workflow

.. currentmodule:: dipy.workflows.combined_workflow
.. autosummary::

   CombinedWorkflow


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.denoise`
--------------------------------
.. automodule:: dipy.workflows.denoise

.. currentmodule:: dipy.workflows.denoise
.. autosummary::

   Patch2SelfFlow
   NLMeansFlow
   LPCAFlow
   MPPCAFlow
   GibbsRingingFlow


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.docstring_parser`
-----------------------------------------
.. automodule:: dipy.workflows.docstring_parser

.. currentmodule:: dipy.workflows.docstring_parser
.. autosummary::

   Reader
   NumpyDocString
   dedent_lines


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.flow_runner`
------------------------------------
.. automodule:: dipy.workflows.flow_runner

.. currentmodule:: dipy.workflows.flow_runner
.. autosummary::

   get_level
   run_flow


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.io`
---------------------------
.. automodule:: dipy.workflows.io

.. currentmodule:: dipy.workflows.io
.. autosummary::

   StatsPropertyName
   PercentilePropertyName
   VolumetricPropertyName
   BvalPropertyName
   BvecPropertyName
   TractographyPropertyName
   IoInfoFlow
   FetchFlow
   SplitFlow
   ExtractB0Flow
   ExtractShellFlow
   ExtractVolumeFlow
   ConcatenateTractogramFlow
   ConvertSHFlow
   ConvertTensorsFlow
   ConvertTractogramFlow
   NiftisToPamFlow
   TensorToPamFlow
   PamToNiftisFlow
   MathFlow
   format_data_names_table


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.mask`
-----------------------------
.. automodule:: dipy.workflows.mask

.. currentmodule:: dipy.workflows.mask
.. autosummary::

   MaskFlow


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.multi_io`
---------------------------------
.. automodule:: dipy.workflows.multi_io

.. currentmodule:: dipy.workflows.multi_io
.. autosummary::

   IOIterator
   common_start
   slash_to_under
   connect_output_paths
   concatenate_inputs
   io_iterator


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.nn`
---------------------------
.. automodule:: dipy.workflows.nn

.. currentmodule:: dipy.workflows.nn
.. autosummary::

   EVACPlusFlow
   BiasFieldCorrectionFlow


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.reconst`
--------------------------------
.. automodule:: dipy.workflows.reconst

.. currentmodule:: dipy.workflows.reconst
.. autosummary::

   ReconstMAPMRIFlow
   ReconstPowermapFlow
   ReconstDtiFlow
   ReconstDsiFlow
   ReconstCSDFlow
   ReconstQBallBaseFlow
   ReconstDkiFlow
   ReconstIvimFlow
   ReconstRUMBAFlow
   ReconstSDTFlow
   ReconstSFMFlow
   ReconstGQIFlow
   ReconstForecastFlow
   ReconstFwdtiFlow
   ReconstForceFlow


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.segment`
--------------------------------
.. automodule:: dipy.workflows.segment

.. currentmodule:: dipy.workflows.segment
.. autosummary::

   MedianOtsuFlow
   RecoBundlesFlow
   LabelsBundlesFlow
   ClassifyTissueFlow
   BrainMaskFlow
   ClusterStreamlinesFlow


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.stats`
------------------------------
.. automodule:: dipy.workflows.stats

.. currentmodule:: dipy.workflows.stats
.. autosummary::

   SNRinCCFlow
   BundleAnalysisTractometryFlow
   LinearMixedModelsFlow
   BundleShapeAnalysis
   buan_bundle_profiles


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.tracking`
---------------------------------
.. automodule:: dipy.workflows.tracking

.. currentmodule:: dipy.workflows.tracking
.. autosummary::

   LocalFiberTrackingPAMFlow
   PFTrackingPAMFlow


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.utils`
------------------------------
.. automodule:: dipy.workflows.utils

.. currentmodule:: dipy.workflows.utils
.. autosummary::

   handle_vol_idx


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.viz`
----------------------------
.. automodule:: dipy.workflows.viz

.. currentmodule:: dipy.workflows.viz
.. autosummary::

   HorizonFlow


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.workflow`
---------------------------------
.. automodule:: dipy.workflows.workflow

.. currentmodule:: dipy.workflows.workflow
.. autosummary::

   Workflow



.. currentmodule:: dipy.workflows


.. currentmodule:: dipy.workflows.align


:class:`ResliceFlow`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ResliceFlow
  :members:
  :show-inheritance:


:class:`SlrWithQbxFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SlrWithQbxFlow
  :members:
  :show-inheritance:


:class:`ImageRegistrationFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ImageRegistrationFlow
  :members:
  :show-inheritance:


:class:`ApplyTransformFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ApplyTransformFlow
  :members:
  :show-inheritance:


:class:`SynRegistrationFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SynRegistrationFlow
  :members:
  :show-inheritance:


:class:`MotionCorrectionFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MotionCorrectionFlow
  :members:
  :show-inheritance:


:class:`BundleWarpFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: BundleWarpFlow
  :members:
  :show-inheritance:

check_dimensions
~~~~~~~~~~~~~~~~

.. autofunction:: check_dimensions



.. currentmodule:: dipy.workflows.base


:class:`IntrospectiveArgumentParser`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: IntrospectiveArgumentParser
  :members:
  :show-inheritance:

format_key_value_table
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: format_key_value_table


add_default_args_to_docstring
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: add_default_args_to_docstring


get_args_default
~~~~~~~~~~~~~~~~

.. autofunction:: get_args_default


none_or_dtype
~~~~~~~~~~~~~

.. autofunction:: none_or_dtype



.. currentmodule:: dipy.workflows.cli

run
~~~

.. autofunction:: run



.. currentmodule:: dipy.workflows.combined_workflow


:class:`CombinedWorkflow`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CombinedWorkflow
  :members:
  :show-inheritance:


.. currentmodule:: dipy.workflows.denoise


:class:`Patch2SelfFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: Patch2SelfFlow
  :members:
  :show-inheritance:


:class:`NLMeansFlow`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: NLMeansFlow
  :members:
  :show-inheritance:


:class:`LPCAFlow`
~~~~~~~~~~~~~~~~~


.. autoclass:: LPCAFlow
  :members:
  :show-inheritance:


:class:`MPPCAFlow`
~~~~~~~~~~~~~~~~~~


.. autoclass:: MPPCAFlow
  :members:
  :show-inheritance:


:class:`GibbsRingingFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: GibbsRingingFlow
  :members:
  :show-inheritance:


.. currentmodule:: dipy.workflows.docstring_parser


:class:`Reader`
~~~~~~~~~~~~~~~


.. autoclass:: Reader
  :members:
  :show-inheritance:


:class:`NumpyDocString`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: NumpyDocString
  :members:
  :show-inheritance:

dedent_lines
~~~~~~~~~~~~

.. autofunction:: dedent_lines



.. currentmodule:: dipy.workflows.flow_runner

get_level
~~~~~~~~~

.. autofunction:: get_level


run_flow
~~~~~~~~

.. autofunction:: run_flow



.. currentmodule:: dipy.workflows.io


:class:`StatsPropertyName`
~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: StatsPropertyName
  :members:
  :show-inheritance:


:class:`PercentilePropertyName`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PercentilePropertyName
  :members:
  :show-inheritance:


:class:`VolumetricPropertyName`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: VolumetricPropertyName
  :members:
  :show-inheritance:


:class:`BvalPropertyName`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: BvalPropertyName
  :members:
  :show-inheritance:


:class:`BvecPropertyName`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: BvecPropertyName
  :members:
  :show-inheritance:


:class:`TractographyPropertyName`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TractographyPropertyName
  :members:
  :show-inheritance:


:class:`IoInfoFlow`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: IoInfoFlow
  :members:
  :show-inheritance:


:class:`FetchFlow`
~~~~~~~~~~~~~~~~~~


.. autoclass:: FetchFlow
  :members:
  :show-inheritance:


:class:`SplitFlow`
~~~~~~~~~~~~~~~~~~


.. autoclass:: SplitFlow
  :members:
  :show-inheritance:


:class:`ExtractB0Flow`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ExtractB0Flow
  :members:
  :show-inheritance:


:class:`ExtractShellFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ExtractShellFlow
  :members:
  :show-inheritance:


:class:`ExtractVolumeFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ExtractVolumeFlow
  :members:
  :show-inheritance:


:class:`ConcatenateTractogramFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ConcatenateTractogramFlow
  :members:
  :show-inheritance:


:class:`ConvertSHFlow`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ConvertSHFlow
  :members:
  :show-inheritance:


:class:`ConvertTensorsFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ConvertTensorsFlow
  :members:
  :show-inheritance:


:class:`ConvertTractogramFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ConvertTractogramFlow
  :members:
  :show-inheritance:


:class:`NiftisToPamFlow`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: NiftisToPamFlow
  :members:
  :show-inheritance:


:class:`TensorToPamFlow`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TensorToPamFlow
  :members:
  :show-inheritance:


:class:`PamToNiftisFlow`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PamToNiftisFlow
  :members:
  :show-inheritance:


:class:`MathFlow`
~~~~~~~~~~~~~~~~~


.. autoclass:: MathFlow
  :members:
  :show-inheritance:

format_data_names_table
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: format_data_names_table



.. currentmodule:: dipy.workflows.mask


:class:`MaskFlow`
~~~~~~~~~~~~~~~~~


.. autoclass:: MaskFlow
  :members:
  :show-inheritance:


.. currentmodule:: dipy.workflows.multi_io


:class:`IOIterator`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: IOIterator
  :members:
  :show-inheritance:

common_start
~~~~~~~~~~~~

.. autofunction:: common_start


slash_to_under
~~~~~~~~~~~~~~

.. autofunction:: slash_to_under


connect_output_paths
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: connect_output_paths


concatenate_inputs
~~~~~~~~~~~~~~~~~~

.. autofunction:: concatenate_inputs


io_iterator
~~~~~~~~~~~

.. autofunction:: io_iterator



.. currentmodule:: dipy.workflows.nn


:class:`EVACPlusFlow`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: EVACPlusFlow
  :members:
  :show-inheritance:


:class:`BiasFieldCorrectionFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: BiasFieldCorrectionFlow
  :members:
  :show-inheritance:


.. currentmodule:: dipy.workflows.reconst


:class:`ReconstMAPMRIFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstMAPMRIFlow
  :members:
  :show-inheritance:


:class:`ReconstPowermapFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstPowermapFlow
  :members:
  :show-inheritance:


:class:`ReconstDtiFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstDtiFlow
  :members:
  :show-inheritance:


:class:`ReconstDsiFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstDsiFlow
  :members:
  :show-inheritance:


:class:`ReconstCSDFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstCSDFlow
  :members:
  :show-inheritance:


:class:`ReconstQBallBaseFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstQBallBaseFlow
  :members:
  :show-inheritance:


:class:`ReconstDkiFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstDkiFlow
  :members:
  :show-inheritance:


:class:`ReconstIvimFlow`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstIvimFlow
  :members:
  :show-inheritance:


:class:`ReconstRUMBAFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstRUMBAFlow
  :members:
  :show-inheritance:


:class:`ReconstSDTFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstSDTFlow
  :members:
  :show-inheritance:


:class:`ReconstSFMFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstSFMFlow
  :members:
  :show-inheritance:


:class:`ReconstGQIFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstGQIFlow
  :members:
  :show-inheritance:


:class:`ReconstForecastFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstForecastFlow
  :members:
  :show-inheritance:


:class:`ReconstFwdtiFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstFwdtiFlow
  :members:
  :show-inheritance:


:class:`ReconstForceFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstForceFlow
  :members:
  :show-inheritance:


.. currentmodule:: dipy.workflows.segment


:class:`MedianOtsuFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MedianOtsuFlow
  :members:
  :show-inheritance:


:class:`RecoBundlesFlow`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: RecoBundlesFlow
  :members:
  :show-inheritance:


:class:`LabelsBundlesFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LabelsBundlesFlow
  :members:
  :show-inheritance:


:class:`ClassifyTissueFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ClassifyTissueFlow
  :members:
  :show-inheritance:


:class:`BrainMaskFlow`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: BrainMaskFlow
  :members:
  :show-inheritance:


:class:`ClusterStreamlinesFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ClusterStreamlinesFlow
  :members:
  :show-inheritance:


.. currentmodule:: dipy.workflows.stats


:class:`SNRinCCFlow`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SNRinCCFlow
  :members:
  :show-inheritance:


:class:`BundleAnalysisTractometryFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: BundleAnalysisTractometryFlow
  :members:
  :show-inheritance:


:class:`LinearMixedModelsFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LinearMixedModelsFlow
  :members:
  :show-inheritance:


:class:`BundleShapeAnalysis`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: BundleShapeAnalysis
  :members:
  :show-inheritance:

buan_bundle_profiles
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: buan_bundle_profiles



.. currentmodule:: dipy.workflows.tracking


:class:`LocalFiberTrackingPAMFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LocalFiberTrackingPAMFlow
  :members:
  :show-inheritance:


:class:`PFTrackingPAMFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PFTrackingPAMFlow
  :members:
  :show-inheritance:


.. currentmodule:: dipy.workflows.utils

handle_vol_idx
~~~~~~~~~~~~~~

.. autofunction:: handle_vol_idx



.. currentmodule:: dipy.workflows.viz


:class:`HorizonFlow`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: HorizonFlow
  :members:
  :show-inheritance:


.. currentmodule:: dipy.workflows.workflow


:class:`Workflow`
~~~~~~~~~~~~~~~~~


.. autoclass:: Workflow
  :members:
  :show-inheritance:

